src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__class_script_disabled.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /bar.server.lua
  relevant_paths:
    - /bar.server.lua
    - /bar.meta.json
    - /bar.meta.jsonc
  context:
    emit_legacy_scripts: true
    decode_windows_invalid_chars: false
  specified_id: ~
  middleware: ~
  schema: ~
name: bar
class_name: Script
properties:
  Disabled:
    Bool: true
  RunContext:
    Enum: 0
  Source:
    String: Hello there!
children: []
