src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__init_module_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /root/init.luau
  relevant_paths:
    - /root
    - /root/init.luau
    - /root/init.server.luau
    - /root/init.client.luau
    - /root/init.local.luau
    - /root/init.legacy.luau
    - /root/init.csv
    - /root/init.lua
    - /root/init.server.lua
    - /root/init.client.lua
    - /root/init.meta.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: root
class_name: ModuleScript
properties:
  Source:
    String: Hello!
children: []
